# bosen-umbrella

./: .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md
cache.0/: README
misc/float16_compressor/: CMakeLists.txt  float16_compressor-config.cmake.in
misc/zmqhpp/: CMakeLists.txt  zmqhpp-config.cmake.in
patches/: yaml-cpp.patch
processor/: CMakeLists.txt  bigml-processor.cxx  bigml-verifier.cxx  common.sh  process_data.sh  process_data.sh.in  reorg_spark_files.py
scripts/: CMakeLists.txt  run_data_split.sh.in  run_matrixfact_split.sh.in
umbrella/: .gitrepo  umbrella-init.cmake  umbrella-main.cmake
umbrella/modules/: gflags.cmake
umbrella/umbrella/: eigen.cmake
